# meta-ai-hack

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  inference_test_log.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_smoke.py  upload_space.py
.agents/workflows/: main.md
docs/: problem_statement.md  req.md  requirements_analysis.md
env/: __init__.py  environment.py  models.py  reward.py
env/data/: issues_pool.json  tasks.json
github-issue-triage-env/: README.md  app.py  inference.py  openenv.yaml  requirements.txt
github-issue-triage-env/env/: environment.py  graders.py
github-issue-triage-env/env/data/: label_schema.json  tasks.json
server/: __init__.py  app.py  ast_parser.py  graders.py  gradio_ui.py  promptforge_environment.py  reward.py  tasks.py
