[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-github-issue-triage"
version = "1.0.0"
description = "GitHub Issue Triage environment for OpenEnv — trains agents to triage issues like an open source maintainer"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
include-package-data = true
packages = ["env"]

[tool.setuptools.package-data]
env = ["data/*.json", "**/*.yaml", "**/*.yml", "**/*.md"]
